apps/internal-router/overlays/csdp-september/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csdp-september-internal-router-ingress
  namespace: csdp-september
spec:
  ingressClassName: nginx
  rules:
  - host: rozario-demo.sa.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
